# audio

./: DESCRIPTION  NAMESPACE  NEWS  configure  configure.ac  mkdist
R/: api.R  driver.R  file.R  print.R
man/: audio.drivers.Rd  audioInstance-methods.Rd  audioSample-methods.Rd  audioSample.Rd  controls.Rd  load.audio.driver.Rd  play.Rd  record.Rd  wait.Rd  wave.Rd
src/: Makevars.win  au.c  config.h.in  driver.c  driver.h  file.c  pa.c  pulse.c  reg.c  riff.h  wmm.c
